--- a/CopaAmerica.html
+++ b/CopaAmerica.html
@@ -85,42 +85,42 @@
     <h3>Argentina</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Copa América/ARGENTINA/HOME 1986.jpeg" alt="Camiseta Argentina Local">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/ARGENTINA/HOME 1986.jpeg" alt="Camiseta Argentina Local">
             <h4>Camiseta Local 86</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Copa América/ARGENTINA/AWAY 1994.jpeg" alt="Camiseta Argentina Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/ARGENTINA/AWAY 1994.jpeg" alt="Camiseta Argentina Visitante">
             <h4>Camiseta Visitante 94</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Copa América/ARGENTINA/AWAY 2006.jpg" alt="Camiseta Argentina Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/ARGENTINA/AWAY 2006.jpg" alt="Camiseta Argentina Visitante">
             <h4>Camiseta Visitante 06</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Copa América/ARGENTINA/HOME 2006.jpeg" alt="Camiseta Argentina Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/ARGENTINA/HOME 2006.jpeg" alt="Camiseta Argentina Visitante">
             <h4>Camiseta Local 06</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Copa América/ARGENTINA/AWAY 2014.jpeg" alt="Camiseta Argentina Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/ARGENTINA/AWAY 2014.jpeg" alt="Camiseta Argentina Visitante">
             <h4>Camiseta Visitante 14</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Copa América/ARGENTINA/HOME.jpg" alt="Camiseta Argentina Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/ARGENTINA/HOME.jpg" alt="Camiseta Argentina Visitante">
             <h4>Camiseta Local ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Copa América/ARGENTINA/AWAY.jpg" alt="Camiseta Argentina Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/ARGENTINA/AWAY.jpg" alt="Camiseta Argentina Visitante">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Copa América/ARGENTINA/HOME ESPECIAL 2024.jpg" alt="Camiseta Argentina Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/ARGENTINA/HOME ESPECIAL 2024.jpg" alt="Camiseta Argentina Visitante">
             <h4>Camiseta Local ESPECIAL ACTUAL</h4>
             <p>25€</p>
         </div>
@@ -132,32 +132,32 @@
     <h3>Brazil</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Copa América/Brazil/HOME 2002.jpeg" alt="Camiseta Brazil Local">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/BRAZIL/HOME 2002.jpeg" alt="Camiseta Brazil Local">
             <h4>Camiseta Local 02</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Copa América/Brazil/HOME 2004.jpeg" alt="Camiseta Brazil Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/BRAZIL/HOME 2004.jpeg" alt="Camiseta Brazil Visitante">
             <h4>Camiseta Local 04</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Copa América/Brazil/HOME 06.jpeg" alt="Camiseta Brazil Local">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/BRAZIL/HOME 06.jpeg" alt="Camiseta Brazil Local">
             <h4>Camiseta Local 06</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Copa América/Brazil/AWAY 2019.jpg" alt="Camiseta Brazil Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/BRAZIL/AWAY 2019.jpg" alt="Camiseta Brazil Visitante">
             <h4>Camiseta Visitante 19</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Copa América/Brazil/HOME (19).jpg" alt="Camiseta Brazil Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/BRAZIL/HOME (19).jpg" alt="Camiseta Brazil Visitante">
             <h4>Camiseta Local ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Copa América/Brazil/AWAY (30).jpg" alt="Camiseta Brazil Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/BRAZIL/AWAY (30).jpg" alt="Camiseta Brazil Visitante">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
@@ -169,12 +169,12 @@
     <h3>Canada</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Copa América/Canada/HOME.jpg" alt="Camiseta Canada Local">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/CANADA/HOME.jpg" alt="Camiseta Canada Local">
             <h4>Camiseta Local</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Copa América/Canada/AWAY.jpg" alt="Camiseta Canada Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/CANADA/AWAY.jpg" alt="Camiseta Canada Visitante">
             <h4>Camiseta Visitante</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
@@ -186,12 +186,12 @@
     <h3>Chile</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Copa América/Chile/HOME.jpg" alt="Camiseta Chile Local">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/CHILE/HOME.jpg" alt="Camiseta Chile Local">
             <h4>Camiseta Local</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Copa América/Chile/AWAY.jpg" alt="Camiseta Chile Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/CHILE/AWAY.jpg" alt="Camiseta Chile Visitante">
             <h4>Camiseta Visitante</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
@@ -203,22 +203,22 @@
     <h3>Colombia</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Copa América/Colombia/RETRO 1990.jpeg" alt="Camiseta Colombia Local">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/COLOMBIA/RETRO 1990.jpeg" alt="Camiseta Colombia Local">
             <h4>Camiseta Local 90</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Copa América/Colombia/RETRO ESPECIAL.jpeg" alt="Camiseta Colombia Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/COLOMBIA/RETRO ESPECIAL.jpeg" alt="Camiseta Colombia Visitante">
             <h4>Camiseta ESPECIAL</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Copa América/Colombia/HOME.jpg" alt="Camiseta Colombia Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/COLOMBIA/HOME.jpg" alt="Camiseta Colombia Visitante">
             <h4>Camiseta Local ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Copa América/Colombia/AWAY.jpg" alt="Camiseta Colombia Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/COLOMBIA/AWAY.jpg" alt="Camiseta Colombia Visitante">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
@@ -230,12 +230,12 @@
     <h3>Ecuador</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Copa América/Ecuador/HOME.jpeg" alt="Camiseta Ecuador Local">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/ECUADOR/HOME.jpeg" alt="Camiseta Ecuador Local">
             <h4>Camiseta Local ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Copa América/Ecuador/AWAY.jpg" alt="Camiseta Ecuador Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/ECUADOR/AWAY.jpg" alt="Camiseta Ecuador Visitante">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
@@ -247,12 +247,12 @@
     <h3>EEUU</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Copa América/EEUU/HOME (20).jpg" alt="Camiseta EEUU Local">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/EEUU/HOME (20).jpg" alt="Camiseta EEUU Local">
             <h4>Camiseta Local ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Copa América/EEUU/AWAY.jpg" alt="Camiseta EEUU Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/EEUU/AWAY.jpg" alt="Camiseta EEUU Visitante">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
@@ -264,12 +264,12 @@
     <h3>México</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Copa América/Mexico/HOME.jpg" alt="Camiseta México Local">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/MEXICO/HOME.jpg" alt="Camiseta México Local">
             <h4>Camiseta Local ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Copa América/Mexico/AWAY.jpeg" alt="Camiseta México Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/MEXICO/AWAY.jpeg" alt="Camiseta México Visitante">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
@@ -281,12 +281,12 @@
     <h3>Perú</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Copa América/PERÚ/HOME.jpg" alt="Camiseta Perú Local">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/PERU/HOME.jpg" alt="Camiseta Perú Local">
             <h4>Camiseta Local ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Copa América/PERÚ/AWAY.jpg" alt="Camiseta Perú Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/PERU/AWAY.jpg" alt="Camiseta Perú Visitante">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
@@ -298,12 +298,12 @@
     <h3>Uruguay</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Copa América/Uruguay/HOME.jpg" alt="Camiseta Uruguay Local">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/URUGUAY/HOME.jpg" alt="Camiseta Uruguay Local">
             <h4>Camiseta Loca ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Copa América/Uruguay/AWAY.jpeg" alt="Camiseta Uruguay Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/URUGUAY/AWAY.jpeg" alt="Camiseta Uruguay Visitante">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
@@ -315,12 +315,12 @@
     <h3>Venezuela</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Copa América/Venezuela/HOME.jpeg" alt="Camiseta Venezuela Local">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/VENEZUELA/HOME.jpeg" alt="Camiseta Venezuela Local">
             <h4>Camiseta Local ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Copa América/Venezuela/AWAY.jpg" alt="Camiseta Venezuela Visitante">
+            <img src="Imagenes/SELECCIONES/COPA AMERICA/VENEZUELA/AWAY.jpg" alt="Camiseta Venezuela Visitante">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
