--- a/RetroLaLiga.html
+++ b/RetroLaLiga.html
@@ -100,23 +100,23 @@
             <h3>Atlético de Madrid</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/ATLÉTICO DE MADRID/HOME 2004-05.jpeg" alt="Athletic Club Local 04-05">
-                    <h4>Camiseta Local 04-05</h4>
-                    <p>25€</p>
-                </div>
-                <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/ATLÉTICO DE MADRID/HOME 2014-15.jpeg" alt="Camiseta Athletic Club Visitante">
-                    <h4>Camiseta Local 14-15</h4>
-                    <p>25€</p>
-                </div>
-                <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/ATLÉTICO DE MADRID/HOME 94-95.jpg" alt="Camiseta Athletic Club Alternativa">
+                    <img src="Imagenes/RETRO/LA LIGA/ATLETICO DE MADRID/HOME 94-95.jpg" alt="Camiseta Athletic Club Alternativa">
                     <h4>Camiseta Local 94-95</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/ATLÉTICO DE MADRID/AWAY 98-99.jpg" alt="Camiseta Athletic Club Alternativa">
+                    <img src="Imagenes/RETRO/LA LIGA/ATLETICO DE MADRID/AWAY 98-99.jpg" alt="Camiseta Athletic Club Alternativa">
                     <h4>Camiseta Away 98-99</h4>
+                    <p>25€</p>
+                </div>
+                <div class="producto">
+                    <img src="Imagenes/RETRO/LA LIGA/ATLETICO DE MADRID/HOME 2004-05.jpg" alt="Athletic Club Local 04-05">
+                    <h4>Camiseta Local 04-05</h4>
+                    <p>25€</p>
+                </div>
+                <div class="producto">
+                    <img src="Imagenes/RETRO/LA LIGA/ATLETICO DE MADRID/HOME 2014-15.jpeg" alt="Camiseta Athletic Club Visitante">
+                    <h4>Camiseta Local 14-15</h4>
                     <p>25€</p>
                 </div>
             </div>
@@ -127,7 +127,7 @@
             <h3>Deportivo de la Coruña</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/DEPORTIVO DE LA CORUÑA/AWAY 99-00.jpg" alt="Athletic Club Local 04-05">
+                    <img src="Imagenes/RETRO/LA LIGA/DEPORTIVO DE LA CORUNA/AWAY 99-00.jpg" alt="Athletic Club Local 04-05">
                     <h4>Camiseta Away 99-00</h4>
                     <p>25€</p>
                 </div>
@@ -139,16 +139,6 @@
             <h3>FC Barcelona</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/FC BARCELONA/AWAY 2012-13.jpg" alt="Athletic Club Local 04-05">
-                    <h4>Camiseta Away 12-13</h4>
-                    <p>25€</p>
-                </div>
-                <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/FC BARCELONA/AWAY 2021-22.jpg" alt="Athletic Club Local 04-05">
-                    <h4>Camiseta Away 21-22</h4>
-                    <p>25€</p>
-                </div>
-                <div class="producto">
                     <img src="Imagenes/RETRO/LA LIGA/FC BARCELONA/HOME 96-97.jpg" alt="Athletic Club Local 04-05">
                     <h4>Camiseta Away 96-97</h4>
                     <p>25€</p>
@@ -156,6 +146,11 @@
                 <div class="producto">
                     <img src="Imagenes/RETRO/LA LIGA/FC BARCELONA/HOME 2006-07.jpg" alt="Athletic Club Local 04-05">
                     <h4>Camiseta Away 06-07</h4>
+                    <p>25€</p>
+                </div>
+                <div class="producto">
+                    <img src="Imagenes/RETRO/LA LIGA/FC BARCELONA/AWAY 2012-13.jpg" alt="Athletic Club Local 04-05">
+                    <h4>Camiseta Away 12-13</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
@@ -178,6 +173,11 @@
                     <h4>Camiseta Away 16-17</h4>
                     <p>25€</p>
                 </div>
+                <div class="producto">
+                    <img src="Imagenes/RETRO/LA LIGA/FC BARCELONA/AWAY 2021-22.jpg" alt="Athletic Club Local 04-05">
+                    <h4>Camiseta Away 21-22</h4>
+                    <p>25€</p>
+                </div>
             </div>
         </div>
 
@@ -186,13 +186,13 @@
             <h3>Málaga</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/MÁLAGA/120 ANIVERSARIO.jpg" alt="Athletic Club Local 04-05">
-                    <h4>Camiseta 120 ANIVERSARIO</h4>
+                    <img src="Imagenes/RETRO/LA LIGA/MÁLAGA/HOME 2012-13 (1).jpg" alt="Athletic Club Local 04-05">
+                    <h4>Camiseta Local 12-13</h4>
                     <p>25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/MÁLAGA/HOME 2012-13 (1).jpg" alt="Athletic Club Local 04-05">
-                    <h4>Camiseta Local 12-13</h4>
+                    <img src="Imagenes/RETRO/LA LIGA/MALAGA/120 ANIVERSARIO.jpg" alt="Athletic Club Local 04-05">
+                    <h4>Camiseta 120 ANIVERSARIO</h4>
                     <p>25€</p>
                 </div>
             </div>
