--- a/RetroLigue1.html
+++ b/RetroLigue1.html
@@ -94,7 +94,7 @@
             <h3>Mónaco</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LIGUE 1/MÓNACO/HOME 2016-17.webp" alt="Marsella Local 95-96">
+                    <img src="Imagenes/RETRO/LIGUE 1/MONACO/HOME 2016-17.webp" alt="Marsella Local 95-96">
                     <h4>Camiseta Local 96-17</h4>
                     <p>25€</p>
                 </div>
