CHANGES EURO OTROS

--- a/Eurocopa.html
+++ b/Eurocopa.html
@@ -87,27 +87,27 @@
     <h3>Alemania</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/Alemania/HOME 1990.jpeg" alt="Camiseta Alemania Local">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/ALEMANIA/HOME 1990.jpeg" alt="Camiseta Alemania Local">
             <h4>Camiseta Local 90</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/Alemania/THIRD 98.webp" alt="Camiseta Alemania Local">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/ALEMANIA/THIRD 98.webp" alt="Camiseta Alemania Local">
             <h4>Camiseta Alternativa 98</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/Alemania/HOME 06.jpeg" alt="Camiseta Alemania Local">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/ALEMANIA/HOME 06.jpeg" alt="Camiseta Alemania Local">
             <h4>Camiseta Local 06</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/Alemania/HOME.jpg" alt="Camiseta Alemania Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/ALEMANIA/HOME.jpg" alt="Camiseta Alemania Visitante">
             <h4>Camiseta Local ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/Alemania/AWAY.jpg" alt="Camiseta Alemania Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/ALEMANIA/AWAY.jpg" alt="Camiseta Alemania Visitante">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
@@ -119,12 +119,12 @@
     <h3>Bélgica</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/Belgica/HOME.jpg" alt="Camiseta Bélgica Local">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/BELGICA/HOME.jpg" alt="Camiseta Bélgica Local">
             <h4>Camiseta Local ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/Belgica/AWAY.jpg" alt="Camiseta Bélgica Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/BELGICA/AWAY.jpg" alt="Camiseta Bélgica Visitante">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
@@ -136,17 +136,17 @@
     <h3>Croacia</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/Croacia/HOME 2002.jpg" alt="Camiseta Croacia Local">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/CROACIA/HOME 2002.jpg" alt="Camiseta Croacia Local">
             <h4>Camiseta Local 02</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/Croacia/HOME.jpg" alt="Camiseta Croacia Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/CROACIA/HOME.jpg" alt="Camiseta Croacia Visitante">
             <h4>Camiseta Local ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/Croacia/AWAY.jpg" alt="Camiseta Croacia Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/CROACIA/AWAY.jpg" alt="Camiseta Croacia Visitante">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
@@ -158,12 +158,12 @@
     <h3>Dinamarca</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/Dinamarca/HOME.jpg" alt="Camiseta Dinamarca Local">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/DINAMARCA/HOME.jpg" alt="Camiseta Dinamarca Local">
             <h4>Camiseta Local ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/Dinamarca/AWAY.jpg" alt="Camiseta Dinamarca Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/DINAMARCA/AWAY.jpg" alt="Camiseta Dinamarca Visitante">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
@@ -175,17 +175,17 @@
     <h3>Escocia</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/Escocia/HOME 1978.jpeg" alt="Camiseta Escocia Local">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/ESCOCIA/HOME 1978.jpeg" alt="Camiseta Escocia Local">
             <h4>Camiseta Local 78</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/Escocia/HOME.jpeg" alt="Camiseta Escocia Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/ESCOCIA/HOME.jpeg" alt="Camiseta Escocia Visitante">
             <h4>Camiseta Local ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/Escocia/AWAY.jpg" alt="Camiseta Escocia Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/ESCOCIA/AWAY.jpg" alt="Camiseta Escocia Visitante">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
@@ -197,37 +197,37 @@
     <h3>España</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/ESPAÑA/HOME 1996.jpeg" alt="Camiseta España Local">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/ESPANA/HOME 1996.jpeg" alt="Camiseta España Local">
             <h4>Camiseta Local 96</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/ESPAÑA/HOME 98.jpg.webp" alt="Camiseta España Local">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/ESPANA/HOME 98.jpg.webp" alt="Camiseta España Local">
             <h4>Camiseta Local 98</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/ESPAÑA/AWAY 98.jpg" alt="Camiseta España Local">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/ESPANA/AWAY 98.jpg" alt="Camiseta España Local">
             <h4>Camiseta Visitante 98</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/ESPAÑA/HOME 2010.jpg" alt="Camiseta España Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/ESPANA/HOME 2010.jpg" alt="Camiseta España Visitante">
             <h4>Camiseta Local 2010</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/ESPAÑA/AWAY 2010.jpg" alt="Camiseta España Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/ESPANA/AWAY 2010.jpg" alt="Camiseta España Visitante">
             <h4>Camiseta Visitante 2010</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/ESPAÑA/HOME (15).jpg" alt="Camiseta España Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/ESPANA/HOME (15).jpg" alt="Camiseta España Visitante">
             <h4>Camiseta Local ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/ESPAÑA/AWAY (28).jpg" alt="Camiseta España Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/ESPANA/AWAY (28).jpg" alt="Camiseta España Visitante">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
@@ -239,27 +239,27 @@
     <h3>Francia</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/Francia/AWAY 98.jpg" alt="Camiseta Francia Local">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/FRANCIA/AWAY 98.jpg" alt="Camiseta Francia Local">
             <h4>Camiseta Visitante 98</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/Francia/HOME 1998.jpeg" alt="Camiseta Francia Local">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/FRANCIA/HOME 1998.jpeg" alt="Camiseta Francia Local">
             <h4>Camiseta Local 98</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/Francia/AWAY 2006.jpeg" alt="Camiseta Francia Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/FRANCIA/AWAY 2006.jpeg" alt="Camiseta Francia Visitante">
             <h4>Camiseta Visitante 2006</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/Francia/HOME (16).jpg" alt="Camiseta Francia Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/FRANCIA/HOME (16).jpg" alt="Camiseta Francia Visitante">
             <h4>Camiseta Local ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/Francia/AWAY.jpg" alt="Camiseta Francia Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/FRANCIA/AWAY.jpg" alt="Camiseta Francia Visitante">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
@@ -271,12 +271,12 @@
     <h3>Georgia</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/GEORGIA/GEORGIA.jpg" alt="Camiseta Georgia Local">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/GEORGIA/GEORGIA.jpg" alt="Camiseta Georgia Local">
             <h4>Camiseta Local ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/Georgia/AWAY.jpg" alt="Camiseta Georgia Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/Georgia/AWAY.jpg" alt="Camiseta Georgia Visitante">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
@@ -288,17 +288,17 @@
     <h3>Inglaterra</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/Inglaterra/HOME 1998.jpg" alt="Camiseta Inglaterra Local">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/INGLATERRA/HOME 1998.jpg" alt="Camiseta Inglaterra Local">
             <h4>Camiseta Local 98</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/Inglaterra/HOME.jpg" alt="Camiseta Inglaterra Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/INGLATERRA/HOME.jpg" alt="Camiseta Inglaterra Visitante">
             <h4>Camiseta Local ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/Inglaterra/AWAY.jpeg" alt="Camiseta Inglaterra Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/INGLATERRA/AWAY.jpeg" alt="Camiseta Inglaterra Visitante">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
@@ -310,27 +310,27 @@
     <h3>Italia</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/Italia/AWAY 94.jpg" alt="Camiseta Italia Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/ITALIA/AWAY 94.jpg" alt="Camiseta Italia Visitante">
             <h4>Camiseta Visitante 94</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/Italia/HOME 96.jpg.webp" alt="Camiseta Italia Local">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/ITALIA/HOME 96.jpg.webp" alt="Camiseta Italia Local">
             <h4>Camiseta Local 96</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/Italia/HOME 2012.jpg.webp" alt="Camiseta Italia Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/ITALIA/HOME 2012.jpg.webp" alt="Camiseta Italia Visitante">
             <h4>Camiseta Local 2012</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/Italia/HOME.jpg" alt="Camiseta Italia Local">
+            <img src="Imagenes/SELECCIONES/ECUROCOPA/ITALIA/HOME.jpg" alt="Camiseta Italia Local">
             <h4>Camiseta Local ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/Italia/AWAY.jpg" alt="Camiseta Italia Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/ITALIA/AWAY.jpg" alt="Camiseta Italia Visitante">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
@@ -342,17 +342,17 @@
     <h3>Países Bajos</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/Paises Bajos/HOME 1988.jpeg" alt="Camiseta Países Bajos Local">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/PAISES BAJOS/HOME 1988.jpeg" alt="Camiseta Países Bajos Local">
             <h4>Camiseta Local 88</h4>
             <p>25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/Paises Bajos/HOME.jpeg" alt="Camiseta Países Bajos Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/PAISES BAJOS/HOME.jpeg" alt="Camiseta Países Bajos Visitante">
             <h4>Camiseta Local ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/Paises Bajos/AWAY.jpg" alt="Camiseta Países Bajos Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/PAISES BAJOS/AWAY.jpg" alt="Camiseta Países Bajos Visitante">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
@@ -364,37 +364,37 @@
     <h3>Portugal</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/Portugal/HOME 2004.jpeg" alt="Camiseta Portugal Local">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/PORTUGAL/HOME 2004.jpeg" alt="Camiseta Portugal Local">
             <h4>Camiseta Local 2004</h4>
             <p>23€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/Portugal/AWAY 2012.jpeg" alt="Camiseta Portugal Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/PORTUGAL/AWAY 2012.jpeg" alt="Camiseta Portugal Visitante">
             <h4>Camiseta Visitante 2012</h4>
             <p>23€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/Portugal/HOME 2016.webp" alt="Camiseta Portugal Local">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/PORTUGAL/HOME 2016.webp" alt="Camiseta Portugal Local">
             <h4>Camiseta Local 2016</h4>
             <p>23€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/Portugal/HOME.jpg" alt="Camiseta Portugal Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/PORTUGAL/HOME.jpg" alt="Camiseta Portugal Visitante">
             <h4>Camiseta Local NIKE 2024</h4>
             <p>23€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/Portugal/AWAY.jpg" alt="Camiseta Portugal Local">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/PORTUGAL/AWAY.jpg" alt="Camiseta Portugal Local">
             <h4>Camiseta Visitante NIKE 2024</h4>
             <p>23€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/Portugal/HOME 2025.jpg" alt="Camiseta Portugal Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/PORTUGAL/HOME 2025.jpg" alt="Camiseta Portugal Visitante">
             <h4>Camiseta Local ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/Portugal/AWAY 2025.jpg" alt="Camiseta Portugal Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/PORTUGAL/AWAY 2025.jpg" alt="Camiseta Portugal Visitante">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
@@ -406,12 +406,12 @@
     <h3>Suiza</h3>
     <div class="productos">
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/Suiza/HOME.jpg" alt="Camiseta Suiza Local">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/SUIZA/HOME.jpg" alt="Camiseta Suiza Local">
             <h4>Camiseta Local ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
         <div class="producto">
-            <img src="Imagenes/SELECCIONES/Eurocopa/Suiza/AWAY.jpg" alt="Camiseta Suiza Visitante">
+            <img src="Imagenes/SELECCIONES/EUROCOPA/SUIZA/AWAY.jpg" alt="Camiseta Suiza Visitante">
             <h4>Camiseta Visitante ACTUAL</h4>
             <p>FAN: 23€ - PLAYER: 25€</p>
         </div>
