--- a/Hypermotion.html
+++ b/Hypermotion.html
@@ -176,12 +176,12 @@
         <h3>Real Oviedo</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/LIGA HYPERMOTION/Real Oviedo/HOME (14).jpg" alt="Camiseta Real Oviedo">
+                <img src="Imagenes/LIGA HYPERMOTION/REAL OVIEDO/HOME (14).jpg" alt="Camiseta Real Oviedo">
                 <h4>Camiseta Local</h4>
                 <p>23€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/LIGA HYPERMOTION/Real Oviedo/AWAY (27).jpg" alt="Camiseta Real Oviedo">
+                <img src="Imagenes/LIGA HYPERMOTION/REAL OVIEDO/AWAY (27).jpg" alt="Camiseta Real Oviedo">
                 <h4>Camiseta Visitante</h4>
                 <p>23€</p>
             </div>
