--- a/RetroLaLiga.html
+++ b/RetroLaLiga.html
@@ -186,7 +186,7 @@
             <h3>Málaga</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LA LIGA/MÁLAGA/HOME 2012-13 (1).jpg" alt="Athletic Club Local 04-05">
+                    <img src="Imagenes/RETRO/LA LIGA/MALAGA/HOME 2012-13 (1).jpg" alt="Athletic Club Local 04-05">
                     <h4>Camiseta Local 12-13</h4>
                     <p>25€</p>
                 </div>
