--- a/Ligue_1.html
+++ b/Ligue_1.html
@@ -93,7 +93,7 @@
 
         <!-- Lyon -->
         <div id="lyon" class="equipo">
-            <h3>Lyon</h3>
+            <h3>Olympique de Lyon</h3>
             <div class="productos">
                 <div class="producto">
                     <img src="Imagenes/LIGUE 1/LYON/HOME (10).jpg" alt="Camiseta Lyon">
