--- a/Serie_A.html
+++ b/Serie_A.html
@@ -122,7 +122,7 @@
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/SERIE A/INTER MILAN/AWAY (11).jpg" alt="Camiseta Inter">
+                <img src="Imagenes/SERIE A/INTER MILAN/AWAY (11).jpg" alt="Camiseta Inter 2">
                 <h4>Camiseta Visitante</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
@@ -136,7 +136,7 @@
 
     <!-- Juve -->
     <div id="juve" class="equipo">
-        <h3>Juve</h3>
+        <h3>Juventus de Turín</h3>
         <div class="productos">
             <div class="producto">
                 <img src="Imagenes/SERIE A/JUVENTUS/HOME (8).jpg" alt="Camiseta Juve">
